Migliorate bean.